# stm32-industrial-hmi-demo

./: .gitignore  README.md
machine_f429/: .cproject  .project  machine_f429 Debug.launch  machine_f429.ioc
machine_f429/Core/Src/: main.c  stm32f4xx_hal_msp.c
master_f409/: .cproject  .mxproject  .project  master_f407 Debug.launch  master_f407.ioc
master_f409/Core/Src/: main.c  stm32f4xx_hal_msp.c
pc_hmi_qt/STM32_HMI_Industry/: CMakeLists.txt  Main.qml  main.cpp  serialmanger.cpp  serialmanger.h
